[package]
name = "exchange-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["history_model", "moex_api"]

[dependencies]
actix-web = "4"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
moex_api = { path = "moex_api" }

redis = { version = "0.29.1", features = ["json"]}
env_logger = "0.11.6"
log = "0.4.26"
