[package]
name = "exchange-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cbr_api", "history_model", "moex_api", "spbex_api"]
resolver = "2"

[dependencies]
actix-web = "4"
env_logger = "0.11.6"
log = "0.4.26"
redis = { version = "0.29.1", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

# local
cbr_api = { path = "cbr_api" }
history_model = { path = "history_model" }
moex_api = { path = "moex_api" }
spbex_api = { path = "spbex_api" }
