# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/cbr_api",
    "crates/exchange_api_bin",
    "crates/history_model",
    "crates/healthcheck_bin",
    "crates/moex_api",
    "crates/spbex_api",
]
default-members = ["crates/exchange_api_bin", "crates/healthcheck_bin"]
resolver = "3"

[workspace.dependencies]
cbr_api = { path = "crates/cbr_api" }
exchange_api_bin = { path = "crates/exchange_api_bin" }
history_model = { path = "crates/history_model" }
healthcheck = { path = "crates/healthcheck_bin" }
moex_api = { path = "crates/moex_api" }
spbex_api = { path = "crates/spbex_api" }

[workspace.package]
edition = "2024"
version = "0.1.0"

[profile.release-optimized]
inherits = "release"
lto = true
opt-level = 3
