[package]
name = "cbr_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.26"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.218"
quick-xml = { version = "0.37.2", features = ["serialize"] }

# local
history_model = { path = "../history_model" }
