[package]
name = "moex_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.218"
serde_json = "1.0.139"
history_model = { path = "../history_model" }
redis = { version = "0.29.1", features = ["tokio-comp", "json"]}