[package]
name = "cbr_api"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
quick-xml = { version = "0.38.3", features = ["serialize"] }

# local
history_model = { path = "../history_model" }
