[package]
name = "cbr_api"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.219"
quick-xml = { version = "0.38.3", features = ["serialize"] }

# local
history_model = { path = "../history_model" }
