[package]
name = "exchange_api_bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "exchange_api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.28"
redis = { version = "1.0.2", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"

# local
cbr_api.workspace = true
history_model.workspace = true
moex_api.workspace = true
spbex_api.workspace = true
