[package]
name = "moex_api"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"
redis = { version = "0.32.6", features = ["tokio-comp", "json"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.145"

# local
history_model.workspace = true
