[package]
name = "moex_api"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.29"
redis = { version = "1.0.2", features = ["tokio-comp", "json"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.149"

# local
history_model.workspace = true
