[package]
name = "spbex_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.27"
reqwest = { version = "0.12.18", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.142"

# local
history_model.workspace = true
