[package]
name = "spbex_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.149"

# local
history_model.workspace = true
